--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emailjs/browser": "^3.7.0",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
@@ -11,7 +12,6 @@
         "flowbite-react": "^0.1.5",
         "framer-motion": "^7.0.0",
         "gh-pages": "^4.0.0",
-        "hover-effect": "^1.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-fast-marquee": "^1.3.4",
@@ -19,7 +19,6 @@
         "react-scripts": "5.0.1",
         "react-scroll": "^1.8.7",
         "react-spinners": "^0.13.4",
-        "three": "^0.143.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
